# autorev

./: .env.example  .gitignore  LICENSE  README.md  agent.py  autorev.py  coderabbit.py  config.py  evaluate.py  pyproject.toml  signals.py
examples/: demo-results.json
tests/: test_coderabbit.py  test_signals.py
